# code-with-ai

./: .gitignore  pyproject.toml
ai-powered-software-design/: social-network-db.py
ai-powered-software-design/docs/source/: conf.py  index.rst
ai-powered-software-design/src/: C3M2_Assignment.ipynb  C3M2_Assignment.ipynb:Zone.Identifier  database_setup.py  ecommerce.db  members.csv:Zone.Identifier
ai-powered-software-design/tests/: unittests.py:Zone.Identifier
code-with-ai/: C1M3_Linked_List.ipynb  C1M3_Linked_List.ipynb:Zone.Identifier  avl.py  datastructures.py  pair-coding-with-an-llm.py
source/: conf.py  index.rst
source/team-software-engineering-with-ai/c2m1_assignment/: C2M1_Assignment.ipynb  C2M1_Assignment.ipynb:Zone.Identifier  unittests.py:Zone.Identifier
source/team-software-engineering-with-ai/c2m3_assignment/: instructions.md:Zone.Identifier
source/team-software-engineering-with-ai/c2m3_assignment/assignment_part_1/: instructions.md:Zone.Identifier  magic_summation.py  magic_summation.py:Zone.Identifier  magic_summation_python27.py:Zone.Identifier  unittests.py:Zone.Identifier
source/team-software-engineering-with-ai/c2m3_assignment/assignment_part_2/: data_example.csv:Zone.Identifier  df_converter.py:Zone.Identifier  gen_employee_schedule.py:Zone.Identifier  info.json:Zone.Identifier  instructions.md:Zone.Identifier  internal_stats.py:Zone.Identifier  (+3 more)
source/team-software-engineering-with-ai/src/: software-performance-testing.py  tasks.py  tasks.rst
source/team-software-engineering-with-ai/tests/: test_app.py  test_tasks.py
(+12 files in other folders)
