[tool.poetry]
name = "code-with-ai"
version = "0.1.0"
description = "coursera course on generative ai for programmers"
authors = ["Jan van den Brand"]
license = "EUPLv1.2"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
Flask = "^3.0.3"
SQLAlchemy = "^2.0.36"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
bandit = "^1.7.10"
Sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
